--- a/StorageManager.csproj
+++ b/StorageManager.csproj
@@ -56,6 +56,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Database\DBConnector.cs" />
     <Compile Include="StorageManager.cs">
       <SubType>Form</SubType>
     </Compile>
